--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-elements": "^0.19.1",
+    "react-native-gesture-handler": "^1.0.10",
     "react-native-vector-icons": "^6.1.0",
+    "react-navigation": "^3.0.4",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
