--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "buffer": "^5.2.1",
     "firebase": "^5.6.0",
     "moment": "^2.22.2",
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-elements": "^0.19.1",
     "react-native-gesture-handler": "^1.0.10",
+    "react-native-image-crop-picker": "^0.21.3",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.4",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.10.13"
   },
   "devDependencies": {
     "babel-jest": "24.0.0-alpha.2",
