--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.22.2",
     "react": "16.6.1",
     "react-native": "0.57.7",
+    "react-native-background-timer": "^2.1.1",
     "react-native-elements": "^0.19.1",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-image-crop-picker": "^0.21.3",
